--- a/week1/day2.ipynb
+++ b/week1/day2.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f622d912-a32b-488b-881d-51cde0c350ae",
    "metadata": {},
    "outputs": [
@@ -252,6 +252,59 @@
     "with open('day2modified.json', 'w') as f:\n",
     "    json.dump(updateData, f, indent=4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3799f9c3-08e8-4a23-a9d7-16e6bff9a0bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ 'Arun': ['Python', 'JSON', 'Pandas'],\n",
+      "  'Barun': ['Marketing', 'Communication', 'Management'],\n",
+      "  'Christy': ['Physiology', 'Nero-disease', 'Pathology'],\n",
+      "  'Samikshya': ['Law', 'Economics', 'Immigration']}\n",
+      "\n",
+      "{ 'Arun': {'courses': ['Python', 'JSON', 'Pandas'], 'name': 'Arun'},\n",
+      "  'Barun': { 'courses': ['Marketing', 'Communication', 'Management'],\n",
+      "             'name': 'Barun'},\n",
+      "  'Christy': { 'courses': ['Physiology', 'Nero-disease', 'Pathology'],\n",
+      "               'name': 'Christy'},\n",
+      "  'Samikshya': { 'courses': ['Law', 'Economics', 'Immigration'],\n",
+      "                 'name': 'Samikshya'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "with open('day2modified.json', 'r') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "import pprint\n",
+    "pprint.pprint(data, indent=2)\n",
+    "\n",
+    "for key,value in data.items():\n",
+    "    data[key] = {\n",
+    "        \"name\" : key,\n",
+    "        \"courses\" : value\n",
+    "    }\n",
+    "print()\n",
+    "pprint.pprint(data, indent=2)\n",
+    "\n",
+    "with open('day2nested.json', 'w') as f:\n",
+    "    json.dump(data, f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "099dacb4-c98e-44b8-bb82-4ddfe94f487a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
