--- a/week1/day5.ipynb
+++ b/week1/day5.ipynb
@@ -661,18 +661,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "96273f78-a373-41e4-8699-d3a9a4ce16e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5by5 int matrix\n",
+      " [[0 8 6 4 8]\n",
+      " [0 6 4 1 3]\n",
+      " [6 2 5 4 2]\n",
+      " [7 4 1 3 6]\n",
+      " [5 0 0 3 2]]\n",
+      "1d array with floats\n",
+      " [[0.64213171 0.9019087  0.07578265 0.96278832 0.21677992 0.98476452\n",
+      "  0.72390087 0.95351166 0.28111889 0.02184832]]\n"
+     ]
+    }
+   ],
    "source": [
     "#random matrix of size 5by5 with 0 to 9 range\n",
     "i = np.random.randint(0, 9, size = (5,5))\n",
     "\n",
-    "print(\"5by5 int matrix\", i)\n",
+    "print(\"5by5 int matrix\\n\", i)\n",
     "\n",
     "j = np.random.rand(1, 10)\n",
-    "print(\"1d array with floats\""
+    "print(\"1d array with floats\\n\", j)"
    ]
   }
  ],
